Fixed all alignments

--- a/angular/decos/e-ifu/src/app/mainview/mainview.component.scss
+++ b/angular/decos/e-ifu/src/app/mainview/mainview.component.scss
@@ -53,7 +53,7 @@ justify-content: center !important;
   display: flex;
   width: 100%;
   height: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  // border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .example-sidenav-content {
@@ -62,6 +62,6 @@ justify-content: center !important;
   // align-items: flex-start;
 }
 
-.example-sidenav {
-  padding: 20px;
+.inner-sidenav {
+  position: fixed !important;
 }
